--- a/TuCaféCCC/about.html
+++ b/TuCaféCCC/about.html
@@ -10,7 +10,7 @@
     <link rel="preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>TuCaféCCC | Contacto</title>
+    <title>TuCaféCCC | Sobre nosotros</title>
 </head>
 <body>
     <header class="header"> <!-- Bar & Title Card -->
